--- a/app/assets/stylesheets/rails_admin/rails_admin.scss.erb
+++ b/app/assets/stylesheets/rails_admin/rails_admin.scss.erb
@@ -6,20 +6,20 @@
 
 /***  Variables  ***/
 
-@import "bootstrap/variables";
+@import "bootstrap2/variables";
 @import "rails_admin/base/variables";
 @import "rails_admin/themes/<%= theme %>/variables";
 @import "rails_admin/custom/variables";
 
 /***  Mixins  ***/
 
-@import "bootstrap/mixins";
+@import "bootstrap2/mixins";
 @import "rails_admin/base/mixins";
 @import "rails_admin/themes/<%= theme %>/mixins";
 @import "rails_admin/custom/mixins";
 
 /*** Reset ***/
-@import "bootstrap/reset";
+@import "bootstrap2/reset";
 /***  Libraries  ***/
 
 @import "rails_admin/aristo/jquery-ui-1.8.7.custom";
@@ -35,34 +35,34 @@
 
 /***  Bootstrap Theming  ***/
 
-@import "bootstrap/scaffolding";
-@import "bootstrap/grid";
-@import "bootstrap/layouts";
-@import "bootstrap/type";
-@import "bootstrap/forms";
-@import "bootstrap/tables";
-@import "bootstrap/dropdowns";
-@import "bootstrap/wells";
-@import "bootstrap/component-animations";
-@import "bootstrap/close";
-@import "bootstrap/buttons";
-@import "bootstrap/button-groups";
-@import "bootstrap/alerts";
-@import "bootstrap/navs";
-@import "bootstrap/navbar";
-@import "bootstrap/breadcrumbs";
-@import "bootstrap/pagination";
-@import "bootstrap/pager";
-@import "bootstrap/modals";
-@import "bootstrap/tooltip";
-@import "bootstrap/popovers";
-@import "bootstrap/thumbnails";
-@import "bootstrap/labels-badges";
-@import "bootstrap/progress-bars";
-@import "bootstrap/accordion";
-@import "bootstrap/carousel";
-@import "bootstrap/hero-unit";
-@import "bootstrap/utilities";
+@import "bootstrap2/scaffolding";
+@import "bootstrap2/grid";
+@import "bootstrap2/layouts";
+@import "bootstrap2/type";
+@import "bootstrap2/forms";
+@import "bootstrap2/tables";
+@import "bootstrap2/dropdowns";
+@import "bootstrap2/wells";
+@import "bootstrap2/component-animations";
+@import "bootstrap2/close";
+@import "bootstrap2/buttons";
+@import "bootstrap2/button-groups";
+@import "bootstrap2/alerts";
+@import "bootstrap2/navs";
+@import "bootstrap2/navbar";
+@import "bootstrap2/breadcrumbs";
+@import "bootstrap2/pagination";
+@import "bootstrap2/pager";
+@import "bootstrap2/modals";
+@import "bootstrap2/tooltip";
+@import "bootstrap2/popovers";
+@import "bootstrap2/thumbnails";
+@import "bootstrap2/labels-badges";
+@import "bootstrap2/progress-bars";
+@import "bootstrap2/accordion";
+@import "bootstrap2/carousel";
+@import "bootstrap2/hero-unit";
+@import "bootstrap2/utilities";
 
 /***  RailsAdmin Theming  ***/
 
