--- a/app/views/rails_admin/main/_dashboard_history.html.haml
+++ b/app/views/rails_admin/main/_dashboard_history.html.haml
@@ -6,15 +6,16 @@
       %th.changes= t("admin.table_headers.changes")
   %tbody
     - @history.each do |t|
-      - abstract_model = RailsAdmin.config(t.table).try(:abstract_model)
+      - abstract_model = RailsAdmin.config(t.table).abstract_model
+      - o = abstract_model ? abstract_model.try(:get, t.item) : nil
+      - label = o ? o.send(abstract_model.config.object_label_method) : t.table.constantize.model_name.human
       %tr
         %td= t.try :username
-        - if o = abstract_model.try(:get, t.item)
-          - label = o.send(abstract_model.config.object_label_method)
+        - if o
           - if show_action = action(:show, abstract_model, o)
             %td= link_to(label, url_for(:action => show_action.action_name, :model_name => abstract_model.to_param, :id => o.id), :class => 'pjax')
           - else
             %td= label
         - else
-          %td= "#{t.table} ##{t.item}"
-        %td= t.message.in?(['delete', 'new']) ? t("admin.actions.#{t.message}.done").capitalize : t.message
+          %td= "#{label} ##{t.item}"
+        %td= t.message
