--- a/app/views/rails_admin/main/_dashboard_history.html.haml
+++ b/app/views/rails_admin/main/_dashboard_history.html.haml
@@ -7,15 +7,15 @@
   %tbody
     - @history.each do |t|
       - abstract_model = RailsAdmin.config(t.table).abstract_model
-      - o = abstract_model ? abstract_model.try(:get, t.item) : nil
-      - label = o ? o.send(abstract_model.config.object_label_method) : t.table.constantize.model_name.human
       %tr
         %td= t.try :username
-        - if o
+        - if o = abstract_model.try(:get, t.item)
+          - label = o.send(abstract_model.config.object_label_method)
           - if show_action = action(:show, abstract_model, o)
             %td= link_to(label, url_for(:action => show_action.action_name, :model_name => abstract_model.to_param, :id => o.id), :class => 'pjax')
           - else
             %td= label
         - else
+          - label = Object.const_defined?(t.table) ? t.table.constantize.model_name.human : t.table
           %td= "#{label} ##{t.item}"
         %td= t.message
